tests/ui/rename/test_rename_meta_name_value.rs
use shorthand::ShortHand;

#[derive(ShortHand)]
struct Command {
    #[shorthand(rename = "example")]
    first: usize,
}

fn main() {}
